--- a/header2.html
+++ b/header2.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant Header</title>
+    <title>Valorant Header Replica</title>
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
+            <!-- Logo -->
             <a href="/" class="logo">
-                <img src="valorant-logo.png" alt="Valorant Logo">
+                <img src="icon (1).jpg" alt="PDD logo">
             </a>
+            <!-- Navigation -->
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a href="#game">Game</a></li>
-                    <li><a href="#news">News</a></li>
                     <li><a href="#agents">Agents</a></li>
                     <li><a href="#maps">Maps</a></li>
+                    <li><a href="#news">News</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
-            <div class="cta">
-                <a href="#play" class="btn">Play Now</a>
-            </div>
+            <!-- Call-to-Action Button -->
+            <a href="#play" class="btn">Play Free</a>
         </div>
     </header>
 </body>
