--- a/header2.html
+++ b/header2.html
@@ -14,7 +14,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="icon (1).jpg" alt="PDD logo">
+                <img src="icon (1).jpg" alt="Valorant Logo">
             </a>
             <!-- Navigation -->
             <nav class="nav">
@@ -26,8 +26,18 @@
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
-            <!-- Call-to-Action Button -->
-            <a href="#play" class="btn">Play Free</a>
+            <!-- Search and CTA -->
+            <div class="actions">
+                <!-- Search Button -->
+                <div class="search">
+                    <input type="text" placeholder="Search" class="search-input">
+                    <button class="search-btn">
+                        <img src="search-icon.png" alt="Search Icon">
+                    </button>
+                </div>
+                <!-- Call-to-Action Button -->
+                <a href="#play" class="btn">Play Free</a>
+            </div>
         </div>
     </header>
 </body>
