--- a/header2.html
+++ b/header2.html
@@ -6,6 +6,8 @@
     <title>Valorant Header Replica</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
+    <!-- FontAwesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="icon (1).jpg" alt="Valorant Logo">
+                <img src="valorant-logo.png" alt="Valorant Logo">
             </a>
             <!-- Navigation -->
             <nav class="nav">
@@ -32,7 +34,7 @@
                 <div class="search">
                     <input type="text" placeholder="Search" class="search-input">
                     <button class="search-btn">
-                        <img src="search-icon.png" alt="Search Icon">
+                        <i class="fas fa-search"></i>
                     </button>
                 </div>
                 <!-- Call-to-Action Button -->
