--- a/header2.html
+++ b/header2.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="valorant-logo.png" alt="Valorant Logo">
+                <img src="icon (1).jpg" alt="Valorant Logo">
             </a>
             <!-- Navigation -->
             <nav class="nav">
