--- a/header2.html
+++ b/header2.html
@@ -35,7 +35,10 @@
                     <button class="search-btn">
                         <i class="fas fa-search"></i>
                     </button>
-                    <input type="text" placeholder="Search" class="search-input">
+                    <input type="text" class="search-input" placeholder="Search">
+                    <button class="close-btn" aria-label="Close Search">
+                        <i class="fas fa-times"></i>
+                    </button>
                 </div>
                 <!-- Call-to-Action Button -->
                 <a href="#play" class="btn">Play Free</a>
