--- a/header2.html
+++ b/header2.html
@@ -33,13 +33,11 @@
                 <!-- Search Button -->
                 <div class="search">
                     <button class="search-btn">
-                        <i class="fas fa-search"></i>
+                        <i class="fas fa-search"></i> <!-- Search Icon -->
                     </button>
                     <input type="text" class="search-input" placeholder="Search">
-                    <button class="close-btn" aria-label="Close Search">
-                        <i class="fas fa-times"></i>
-                    </button>
                 </div>
+
                 <!-- Call-to-Action Button -->
                 <a href="#play" class="btn">Play Free</a>
             </div>
