--- a/header2.html
+++ b/header2.html
@@ -21,10 +21,9 @@
             <!-- Navigation -->
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="#game">Game</a></li>
-                    <li><a href="#agents">Agents</a></li>
-                    <li><a href="#maps">Maps</a></li>
-                    <li><a href="#news">News</a></li>
+                    <li><a href="#feature">Feature</a></li>
+                    <li><a href="#articles">Articles</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li><a href="#about">About</a></li>
                 </ul>
             </nav>
@@ -39,7 +38,7 @@
                 </div>
 
                 <!-- Call-to-Action Button -->
-                <a href="#play" class="btn">Play Free</a>
+                <a href="#play" class="btn">SUBSCRIBE</a>
             </div>
         </div>
     </header>
