--- a/header2.html
+++ b/header2.html
@@ -34,7 +34,7 @@
                     <button class="search-btn">
                         <i class="fas fa-search"></i> <!-- Search Icon -->
                     </button>
-                    <input type="text" class="search-input" placeholder="Search">
+                    <input type="text" class="search-input" placeholder=" ">
                 </div>
 
                 <!-- Call-to-Action Button -->
