--- a/header2.html
+++ b/header2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valorant Header Replica</title>
+    <title>Jdjdjd</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
     <!-- FontAwesome Icon Library -->
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="icon (1).jpg" alt="Valorant Logo">
+                <img src="icon (1).jpg" alt="PDD L">
             </a>
             <!-- Navigation -->
             <nav class="nav">
