--- a/header2.html
+++ b/header2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jdjdjd</title>
+    <title>PDD NEWS</title>
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
     <!-- FontAwesome Icon Library -->
@@ -21,7 +21,7 @@
             <!-- Navigation -->
             <nav class="nav">
                 <ul class="nav-list">
-                    <li><a href="#feature">Feature</a></li>
+                    <li><a href="#featured">Featured</a></li>
                     <li><a href="#articles">Articles</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#about">About</a></li>
@@ -38,7 +38,7 @@
                 </div>
 
                 <!-- Call-to-Action Button -->
-                <a href="#play" class="btn">SUBSCRIBE</a>
+                <a href="#subscribe" class="btn">SUBSCRIBE</a>
             </div>
         </div>
     </header>
