--- a/header2.html
+++ b/header2.html
@@ -37,8 +37,11 @@
                     <input type="text" class="search-input" placeholder=" ">
                 </div>
 
-                <!-- Call-to-Action Button -->
-                <a href="#subscribe" class="btn">SUBSCRIBE</a>
+                <div class="actions">
+                <label class="subscribe-toggle">
+                    <input type="checkbox" class="subscribe-checkbox" />
+                    <span class="btn">Subscribe</span>
+                </label>
             </div>
         </div>
     </header>
