--- a/header2.html
+++ b/header2.html
@@ -30,16 +30,16 @@
             <!-- Search and CTA -->
             <div class="actions">
                 <!-- Search Button -->
-                <div class="search">
+            <div class="search">
                     <button class="search-btn">
                         <i class="fas fa-search"></i> <!-- Search Icon -->
                     </button>
                     <input type="text" class="search-input" placeholder=" ">
-                </div>
-
+            </div>
                 <div class="actions">
-                    <span class="btn">Subscribe</span>
-                </label>
+                    <div class="btn">
+                    <a href="#Subscription Page" class="btn">Subscribe</a>
+                 </div>    
             </div>
         </div>
     </header>
