--- a/header2.html
+++ b/header2.html
@@ -30,16 +30,13 @@
             <!-- Search and CTA -->
             <div class="actions">
                 <!-- Search Button -->
-            <div class="search">
-                    <button class="search-btn">
-                        <i class="fas fa-search"></i> <!-- Search Icon -->
-                    </button>
-                    <input type="text" class="search-input" placeholder=" ">
-            </div>
-                <div class="actions">
-                    <div class="btn">
-                    <a href="#Subscription Page" class="btn">Subscribe</a>
-                 </div>    
+                <div class="search">
+                        <button class="search-btn">
+                            <i class="fas fa-search"></i> <!-- Search Icon -->
+                        </button>
+                        <input type="text" class="search-input" placeholder=" ">
+                </div>
+                <a href="#" class="btn">Subscribe</a>
             </div>
         </div>
     </header>
