--- a/header2.html
+++ b/header2.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDD NEWS</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
+    <!-- FontAwesome Icon Library -->
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- CSS -->
@@ -12,6 +15,29 @@
 <body>
     <header class="header">
         <div class="container">
+            <!-- Logo -->
+            <a href="/" class="logo">
+                <img src="icon (1).jpg" alt="PDD L">
+            </a>
+            <!-- Navigation -->
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li><a href="#featured">Featured</a></li>
+                    <li><a href="#articles">Articles</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                </ul>
+            </nav>
+            <!-- Search and CTA -->
+            <div class="actions">
+                <!-- Search Button -->
+                <div class="search">
+                        <button class="search-btn">
+                            <i class="fas fa-search"></i> <!-- Search Icon -->
+                        </button>
+                        <input type="text" class="search-input" placeholder=" ">
+                </div>
+                <a href="#" class="btn">Subscribe</a>
             <!-- Search Button -->
             <div class="search">
                 <button class="search-btn">
