--- a/header2.html
+++ b/header2.html
@@ -17,7 +17,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="icon (1).jpg" alt="PDD L">
+                <img src="icon (1).jpg" alt="PDD Logo">
             </a>
             <!-- Navigation -->
             <nav class="nav">
@@ -37,14 +37,7 @@
                         </button>
                         <input type="text" class="search-input" placeholder=" ">
                 </div>
-                <a href="#" class="btn">Subscribe</a>
-            <!-- Search Button -->
-            <div class="search">
-                <button class="search-btn">
-                    <i class="fas fa-search"></i>
-                </button>
-                <input type="text" class="search-input" placeholder="Search...">
-            </div>
+                <a href="#" class="btn">Subscribe</a>        
         </div>
     </header>
 </body>
