--- a/header2.html
+++ b/header2.html
@@ -7,7 +7,6 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap" rel="stylesheet">
     <!-- FontAwesome Icon Library -->
-    <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
@@ -17,7 +16,7 @@
         <div class="container">
             <!-- Logo -->
             <a href="/" class="logo">
-                <img src="icon (1).jpg" alt="PDD Logo">
+                <img src="icon-1.jpg" alt="PDD Logo">
             </a>
             <!-- Navigation -->
             <nav class="nav">
@@ -32,12 +31,13 @@
             <div class="actions">
                 <!-- Search Button -->
                 <div class="search">
-                        <button class="search-btn">
-                            <i class="fas fa-search"></i> <!-- Search Icon -->
-                        </button>
-                        <input type="text" class="search-input" placeholder=" ">
+                    <button class="search-btn">
+                        <i class="fas fa-search"></i> <!-- Search Icon -->
+                    </button>
+                    <input type="text" class="search-input" placeholder="Search...">
                 </div>
                 <a href="#" class="btn">Subscribe</a>        
+            </div>
         </div>
     </header>
 </body>
