--- a/header2.html
+++ b/header2.html
@@ -32,7 +32,7 @@
                 <!-- Search Button -->
                 <div class="search">
                     <button class="search-btn">
-                        <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i>
+                        <img src="magnifying-glass-solid.svg" alt="Search Icon">
                     </button>
                     <input type="text" class="search-input" placeholder="Search...">
                 </div>
